--- a/web/src/main/resources/static/css/styles.css
+++ b/web/src/main/resources/static/css/styles.css
@@ -81,3 +81,37 @@ body {
 	padding: 10px 0;
 	flex-shrink: 0;
 }
+
+/* Diseños para el login y el register */
+.card {
+	border: none;
+	border-radius: 8px;
+}
+
+.form-control {
+	border-radius: 4px;
+}
+
+.form-control:focus {
+	box-shadow: none;
+	border-color: #ffd700;
+}
+
+.btn-warning {
+	background-color: #ffbf00;
+	border: none;
+	color: #333;
+}
+
+.btn-warning:hover {
+	background-color: #ffd700;
+	color: #fff;
+}
+
+.text-warning {
+	color: #ffbf00 !important;
+}
+
+.text-warning:hover {
+	color: #ffd700 !important;
+}
