--- a/web/src/main/resources/templates/fragments.html
+++ b/web/src/main/resources/templates/fragments.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>News Web</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="/css/styles.css">
-</head>
-
-<body>
+<div th:fragment="header">
 	<!-- Header -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container">
@@ -21,7 +10,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ms-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Noticias</a>
+						<a class="nav-link" href="/news/latestNews">Noticias</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -29,9 +18,12 @@
 							Categorias
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="#">Actualidad</a></li>
-							<li><a class="dropdown-item" href="#">Deportes</a></li>
-							<li><a class="dropdown-item" href="#">Sucesos</a></li>
+							<li><a class="dropdown-item" th:href="@{/news/latestNews(categoria='actualidad')}">Actualidad</a>
+							</li>
+							<li><a class="dropdown-item" th:href="@{/news/latestNews(categoria='Deportes')}">Deportes</a>
+							</li>
+							<li><a class="dropdown-item" th:href="@{/news/latestNews(categoria='actualidad')}">Sucesos</a>
+							</li>
 							<li>
 								<hr class="dropdown-divider">
 							</li>
@@ -39,21 +31,17 @@
 						</ul>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Registro</a>
+						<a class="nav-link" href="/register">Registro</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Login</a>
+						<a class="nav-link" href="/login">Login</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-
-
-	<div class="content container mt-4">
-		<p>Aquí van las cards el body con todas las noticias por defecto</p>
-	</div>
-
+</div>
+<div th:fragment="footer">
 	<!-- Footer -->
 	<footer class="footer bg-dark text-white mt-auto py-3">
 		<div class="container text-center">
@@ -78,9 +66,19 @@
 			</div>
 		</div>
 	</footer>
+</div>
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
 
-</html>
+<!-- Fragmento para una tarjeta de noticia -->
+<div th:fragment="newsCard(title, description, publishDate, imageUrl)">
+	<div class="card bg-dark text-white border-0">
+		<img th:src="${imageUrl}" class="card-img-top" alt="Imagen de la noticia">
+		<div class="card-body">
+			<h5 class="card-title" th:text="${title}">Título de la Noticia</h5>
+			<p class="card-text" th:text="${description}">Descripción breve de la noticia.</p>
+			<p class="card-text">
+				<small class="text-muted" th:text="'Publicado el: ' + ${publishDate}">Fecha de publicación</small>
+			</p>
+		</div>
+	</div>
+</div>
