--- a/web/src/main/resources/templates/news.html
+++ b/web/src/main/resources/templates/news.html
@@ -31,30 +31,37 @@
 				</div>
 			</div>
 		</div>
+
+		<nav aria-label="Page navigation example">
+			<ul class="pagination justify-content-center">
+				<li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">
+					<a class="page-link"
+						th:href="@{/api/web/latestNews(page=${currentPage - 1}, categoria=${categoria})}"
+						aria-label="Previous">
+						<span aria-hidden="true">&laquo;</span>
+					</a>
+				</li>
+				<li th:each="i : ${#numbers.sequence(1, totalPages)}" class="page-item"
+					th:classappend="${currentPage == i} ? 'active'">
+					<a class="page-link" th:href="@{/api/web/latestNews(page=${i}, categoria=${categoria})}"
+						th:text="${i}">1</a>
+				</li>
+				<li class="page-item" th:classappend="${currentPage == totalPages} ? 'disabled'">
+					<a class="page-link"
+						th:href="@{/api/web/latestNews(page=${currentPage + 1}, categoria=${categoria})}"
+						aria-label="Next">
+						<span aria-hidden="true">&raquo;</span>
+					</a>
+				</li>
+			</ul>
+		</nav>
 	</div>
 
-	<nav aria-label="Page navigation example">
-		<ul class="pagination justify-content-center">
-			<li class="page-item">
-				<a class="page-link" href="#" aria-label="Previous">
-					<span aria-hidden="true">&laquo;</span>
-				</a>
-			</li>
-			<li class="page-item"><a class="page-link" href="#">1</a></li>
-			<li class="page-item"><a class="page-link" href="#">2</a></li>
-			<li class="page-item"><a class="page-link" href="#">3</a></li>
-			<li class="page-item">
-				<a class="page-link" href="#" aria-label="Next">
-					<span aria-hidden="true">&raquo;</span>
-				</a>
-			</li>
-		</ul>
+	<!-- Footer -->
+	<div th:insert="fragments :: footer"></div>
 
-		<!-- Footer -->
-		<div th:insert="fragments :: footer"></div>
-
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
