--- a/web/src/main/resources/templates/categories.html
+++ b/web/src/main/resources/templates/categories.html
@@ -10,7 +10,7 @@
 
 <body>
 
-	<div th:insert="fragments :: header"></div>
+	<header th:insert="fragments :: header"></header>
 
 
 	<div class="content container mt-4">
@@ -18,7 +18,7 @@
 	</div>
 
 
-	<div th:insert="fragments :: footer"></div>
+	<footer th:insert="fragments :: footer"></footer>
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
