--- a/web/src/main/resources/templates/fragments.html
+++ b/web/src/main/resources/templates/fragments.html
@@ -1,4 +1,4 @@
-<div th:fragment="header">
+<header th:fragment="header">
 	<!-- Header -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container">
@@ -25,7 +25,8 @@
 									th:href="@{/api/web/latestNews(categoria='Deportes')}">Deportes</a>
 							</li>
 							<li><a class="dropdown-item"
-									th:href="@{/api/web/latestNews(categoria='Noticias/Ciencia')}">Ciencia y tecnología</a>
+									th:href="@{/api/web/latestNews(categoria='Noticias/Ciencia')}">Ciencia y
+									tecnología</a>
 							</li>
 							<li><a class="dropdown-item"
 									th:href="@{/api/web/latestNews(categoria='Noticias/Economía')}">Economía</a>
@@ -57,10 +58,8 @@
 			</div>
 		</div>
 	</nav>
-</div>
-<div th:fragment="footer">
-	<!-- Footer -->
-	<footer class="footer bg-dark text-white mt-auto py-3">
+</header>
+<footer th:fragment="footer" class="footer bg-dark text-white mt-auto py-3">
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-md-4">
@@ -82,20 +81,4 @@
 				</div>
 			</div>
 		</div>
-	</footer>
-</div>
-
-
-<!-- Fragmento para una tarjeta de noticia -->
-<div th:fragment="newsCard(title, description, publishDate, imageUrl)">
-	<div class="card bg-dark text-white border-0">
-		<img th:src="${imageUrl}" class="card-img-top" alt="Imagen de la noticia">
-		<div class="card-body">
-			<h5 class="card-title" th:text="${title}">Título de la Noticia</h5>
-			<p class="card-text" th:text="${description}">Descripción breve de la noticia.</p>
-			<p class="card-text">
-				<small class="text-muted" th:text="'Publicado el: ' + ${publishDate}">Fecha de publicación</small>
-			</p>
-		</div>
-	</div>
-</div>
+</footer>
