--- a/web/src/main/resources/templates/login.html
+++ b/web/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 
 <body>
 	<!-- Header -->
-	<div th:insert="fragments :: header"></div>
+	<header th:insert="fragments :: header"></header>
 
 	<div class="container d-flex align-items-center justify-content-center min-vh-100">
 		<div class="card bg-dark text-white p-4" style="width: 400px;">
@@ -38,7 +38,7 @@
 	</div>
 
 	<!-- Footer -->
-	<div th:insert="fragments :: footer"></div>
+	<footer th:insert="fragments :: footer"></footer>
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
