--- a/web/src/main/resources/templates/news.html
+++ b/web/src/main/resources/templates/news.html
@@ -11,26 +11,31 @@
 
 <body>
 	<!-- Header -->
-	<div th:insert="fragments :: header"></div>
+	<header th:insert="fragments :: header"></header>
 
-
-	<div class="container mt-5">
-		<h1>Noticias</h1>
-		<div class="row">
-			<div th:each="item : ${news}" class="col-md-4 col-lg-3 mb-4">
-				<div class="card bg-dark text-white border-0">
-					<img th:src="${item.image}" class="card-img-top" alt="Imagen de la noticia">
-					<div class="card-body">
-						<h5 class="card-title" th:text="${item.title}">Título de la Noticia</h5>
-						<p class="card-text" th:text="${item.mainCategory}">Descripción breve de la noticia.</p>
-						<p class="card-text">
-							<small class="text-muted" th:text="'Publicado el: ' + ${item.publicationDate}">Fecha de
-								publicación</small>
-						</p>
-					</div>
+	<main>
+		<div class="container mt-5">
+			<h1>Noticias</h1>
+			<div class="row">
+				<div th:each="item : ${news}" class="col-md-4 col-lg-3 mb-4">
+					<form th:action="@{/api/web/buscarNoticia}" method="post">
+						<input type="hidden" name="id" th:value="${item.id}">
+						<div class="card custom-card bg-light" onclick="this.closest('form').submit();">
+							<img th:src="${item.image}" class="card-img-top" alt="Imagen de la noticia">
+							<div class="card-body bg-white">
+								<h5 class="card-title" th:text="${item.title}">Título de la Noticia</h5>
+								<p class="card-text" th:text="${item.mainCategory}">Descripción breve de la noticia.</p>
+								<p class="card-text">
+									<small class="text-muted" th:text="'Publicado el: ' + ${item.publicationDate}">Fecha
+										de publicación</small>
+								</p>
+							</div>
+						</div><button type="submit" hidden class="submit-btn"></button>
+					</form>
 				</div>
 			</div>
 		</div>
+
 
 		<nav aria-label="Page navigation example">
 			<ul class="pagination justify-content-center">
@@ -55,10 +60,10 @@
 				</li>
 			</ul>
 		</nav>
-	</div>
+	</main>
 
 	<!-- Footer -->
-	<div th:insert="fragments :: footer"></div>
+	<footer th:insert="fragments :: footer"></footer>
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
