--- a/web/src/main/resources/templates/register.html
+++ b/web/src/main/resources/templates/register.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<div th:insert="fragments :: header"></div>
+	<header th:insert="fragments :: header"></header>
 
 	<div class="container d-flex align-items-center justify-content-center min-vh-100">
 		<div class="card bg-dark text-white p-4" style="width: 400px;">
@@ -41,7 +41,7 @@
 		</div>
 	</div>
 
-	<div th:insert="fragments :: footer"></div>
+	<footer th:insert="fragments :: footer"></footer>
 
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
